<resources>
    <string name="app_name">ProveMeWrong</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <string name="sign_out">Sign Out</string>
    <string name="topic">Topic</string>
    <string name="vote">Vote</string>
    <string name="end_criteria">End Criteria</string>
    <string name="timed">Timed</string>
    <string name="turn_mode">Turn Mode</string>
    <string name="turn_based">Turn Based</string>
    <string name="real_time">Real Time</string>
    <string name="category">Category</string>
    <string name="next">Next</string>
    <string name="create_debate">Create Debate</string>
    <string name="back">Back</string>
    <string name="participants">Participants</string>
    <string name="add_participants">Add Participants</string>
    <string name="last_activity">Last Activity: %1$s</string>
    <string name="end_date">End Date: %1$s</string>
    <string name="browse">Browse</string>
    <string name="search_debates">Search Debates</string>
    <string name="set_date">Set Date</string>
    <string name="stats">Stats</string>
    <string name="number_of_debates">Number of Debates Completed</string>
    <string name="longest_debate">Longest Debate</string>
    <string name="num_debate_lines">Number of Debate Lines Sent</string>
    <string name="number_of_good_points_received">Number of Good Points Received</string>
    <string name="contacts">Contacts</string>
    <string name="pending_contacts">Pending</string>
    <string name="dialog_add_contact">Enter email address of contact</string>
    <string name="send">Send</string>
    <string name="request_sent">%1$s (Sent)</string>
    <string name="request_received">%1$s (Received)</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="reject_request">Reject Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="remove_contact">Remove Contact</string>
    <string name="cancel_debate_creation">Cancel debate creation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit_debate">Submit new debate?</string>
    <string name="make_argument">Make an argument…</string>
    <string name="vote_to_kick">Vote to Kick</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="kick_user">Kick User</string>
    <string name="like_message">Like Message</string>
    <string name="edit_message">Edit Message</string>
    <string name="remove_message">Remove Message</string>
    <string name="view_profile">View Profile</string>
    <string name="tip_message_actions">Tip: long press a debate message to access menu options</string>
    <string name="tip_set_moderator">Tip: click on a participant to set him/her as the moderator</string>
    <string name="debate_line_edited">%1$s (edited)</string>
    <string name="liked_by">Liked by: %1$s</string>
</resources>
