<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/create_debate_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:context=".CreateDebateActivity">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/text_view_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/topic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="18sp"
                tools:text="Sample Topic"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/text_view_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_criteria"
                android:textSize="18sp"/>

            <RadioGroup
                android:id="@+id/end_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/radio_vote">

                <RadioButton
                    android:id="@+id/radio_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vote"/>

                <RadioButton
                    android:id="@+id/radio_timed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timed"/>

            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <Button
                android:id="@+id/set_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_date"
                android:enabled="false"/>

            <TextView
                android:id="@+id/text_view_end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/end_date"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/text_view_turns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_mode"
                android:textSize="18sp"/>

            <RadioGroup
                android:id="@+id/turn_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_turn_based"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_turn_based"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/turn_based"/>

                <RadioButton
                    android:id="@+id/radio_real_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/real_time"/>
            </RadioGroup>
        </TableRow>
        <View style="@style/Divider"/>
    </TableLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_rightarrow"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="16dp"
            android:text="@string/next"/>

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_leftarrow"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="16dp"
            android:text="@string/back"/>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>
